Added Two Sections

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 
                 </div>
             </div>
+
             <div class="header-container">
                 <div><strong>Empowering youth</strong></div>
                 <div>with tech jobs.</div>
@@ -43,5 +44,51 @@
         </div>
     </section>
     
+    <section class="section-1">
+        <div class="container">
+            <div class="row sub">
+                <div>90%</div>
+                <div>500+</div>
+                <div>145+</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-2">
+        <div class="container">
+            <div class="row sub">
+                <div>Employment Success Rate</div>
+                <div>Youth Trained Since 2016</div>
+                <div>Global Recruitment Partner Companies</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-3">
+        <div class="container">
+            <div class="row sub">
+                <img src="assets/images/Artboard+4@2x-100.jpg" alt="">
+                <div class="col">
+                    <div>Get the skills</div>
+                    <div><strong>companies look for.</strong></div>
+                    <div>Learn how to become a professional Full Stack Web Developer. Acquire technical and interpersonal skills, and gain access to a vast network of employers.</div>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-4">
+        <div class="container">
+            <div class="sub-1">
+                <div>Discover the program</div>
+                <div><strong>that’s right for you.</strong></div>
+            </div>
+            <div class="row sub-2">
+                <img src="assets/images/artboards/Artboard+6@4x.png" width="400px" alt="">
+                <img src="assets/images/artboards/Artboard+7@4x.png" width="400px" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
