Added Three Sections

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="section-3">
         <div class="container">
             <div class="row sub">
-                <img src="assets/images/Artboard+4@2x-100.jpg" alt="">
+                <img src="assets/images/Artboard+4@2x-100.jpg" class="img-fluid" alt="">
                 <div class="col">
                     <div>Get the skills</div>
                     <div><strong>companies look for.</strong></div>
@@ -89,6 +89,74 @@
                 <img src="assets/images/artboards/Artboard+7@4x.png" width="400px" alt="">
             </div>
         </div>
+    </section>
+
+    <section class="section-5">
+        <div class="container">
+            <div class="row sub">
+                <img src="assets/images/artboards/Artboard+4+copy@2x-100.jpg" width="500px" class="img-fluid" alt="">
+                <div class="col">
+                    <div>Our graduates are</div>
+                    <div><strong>market ready.</strong></div>
+                    <div>Students go through deep technical training, including robust theory and intensive coding, with emphasis on critical thinking and a can-do attitude.</div>
+                    <a href="#">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-6">
+        <div class="container">
+            <div class="sub-1">
+                <div>Join our <strong>Global Recruitment Partner Network</strong> and</div>
+                <div>access top talent wherever you are.</div>
+            </div>
+            <div class="sub-2">
+                <div>150+ companies from over 10 countries have joined our network since 2016</div>
+            </div>
+            <div class="sub-3">
+                <img src="assets/icons/RP+partner+logos.jpg" class="img-fluid" alt="">
+                <img src="assets/icons/Artboard+86@3x-100.jpg" class="img-fluid" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="section-7">
+        <div class="sub-1"><strong>In The Media</strong></div>
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <img src="assets/icons/forbes.png" width="250px" alt="">
+              </div>
+              <div class="col-sm">
+                <img src="assets/icons/techcrunch.png" width="250px" alt="">
+              </div>
+              <div class="col-sm">
+                <img src="assets/icons/guardian.png" width="250px" alt="">
+              </div>
+              <div class="col-sm">
+                <img src="assets/icons/tv5.png" width="250px" alt="">
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                  <img src="assets/icons/lorient.png" width="250px" alt="">
+                </div>
+                <div class="col-sm">
+                  <img src="assets/icons/entrepreneur.png" width="250px" alt="">
+                </div>
+                <div class="col-sm">
+                  <img src="assets/icons/wamda.png" width="250px" alt="">
+                </div>
+                <div class="col-sm">
+                  <img src="assets/icons/executive.png" width="250px" alt="">
+                </div>
+              </div>
+        </div>
+    </section>
+
+    <section class="section-8">
+
     </section>
 </body>
 </html>
